Fix overlapping footer on mobile

--- a/webui/src/styles/index.scss
+++ b/webui/src/styles/index.scss
@@ -175,7 +175,6 @@ header {
 
 #footer {
   padding: 40px 16px;
-  position: absolute;
   bottom: 0;
   width: 100%;
 
